sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: not found: value getNombrevaleurs
	for(i<- getNombrevaleurs()-2 to 0){
                ^